# matching-engine

./: .gitignore  CMakeLists.txt  LICENSE
docs/: PROJECT_INSTRUCTIONS.md  README.md  design.md  glossary.md  matching-flow.md  research-notes.md  scenarios.md
include/: Order.h  OrderBook.h  PriceLevel.h  Trade.h
src/: OrderBook.cpp
tests/: OrderBookTest.cpp
